# Ted-s-workshop

./: README.md
Europe at war v2/: Buildings.cpp  Buildings.h  CMakeLists.txt  Controller.cpp  Controller.h  Countries.h  DiploRelations.h  MilitaryObjects.cpp  MilitaryObjects.h  Regions.h  Technologies.cpp  Technologies.h  main.cpp
Europe at war v2.2/: AbstractMilitaryUnit.cpp  AbstractMilitaryUnit.h  Army.cpp  Army.h  Building.cpp  Building.h  BuildingController.cpp  BuildingController.h  CMakeLists.txt  Class diagram.uml  Class diagram.~ml  Country.cpp  Country.h  GameController.cpp  GameController.h  MilitaryUnitController.cpp  MilitaryUnitController.h  MilitaryUnitTypes.cpp  MilitaryUnitTypes.h  Project change notes.txt  Region.cpp  Region.h  RegionController.cpp  RegionController.h  Technology.cpp  Technology.h  TechnologyController.cpp  TechnologyController.h  main.cpp
Hypergalactic Neptunia mods/: hdg.mod
Hypergalactic Neptunia mods/hdg/common/governments/: 00_hgn_governments.txt
Hypergalactic Neptunia mods/hdg/common/species_classes/: 00_hgn_classes.txt
Hypergalactic Neptunia mods/hdg/flags/: colors.txt
Hypergalactic Neptunia mods/hdg/flags/backgrounds/: 00_solid_reversed.dds
Hypergalactic Neptunia mods/hdg/flags/neptunia/: flag_neptunia_1.dds  flag_neptunia_10.dds  flag_neptunia_11.dds  flag_neptunia_2.dds  flag_neptunia_3.dds  flag_neptunia_4.dds  flag_neptunia_5.dds  (+4 more)
Hypergalactic Neptunia mods/hdg/localisation_synced/: hgn_prescripted_countries_names.yml
Hypergalactic Neptunia mods/hdg/prescripted_countries/: 99_hgn_prescripted_countries.txt
(+67 files in other folders)
